test/scc/stmt/semantic-errors/007.a
007.t:3:5: error: a default statement may only be used within a switch